--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         <div class="card-body">
           <div class="profile-section">
-            <img class="profile-image" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 120 120'%3E%3Ccircle cx='60' cy='60' r='60' fill='%238b5cf6'/%3E%3Ctext x='60' y='75' text-anchor='middle' fill='white' font-size='40'%3E👤%3C/text%3E%3C/svg%3E" alt="Parun Profile Picture" />
+            <img class="profile-image" src="me.png" alt="Parun Profile Picture" />
             <h2 class="name">Parun Chumnankul</h2>
             <p class="student-info">M.6/2 No.8</p>
             <p class="school">Suankularb Wittayalai Nonthaburi</p>
@@ -99,3 +99,4 @@
     </script>
   </body>
 </html>
+
