--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         <div class="card-body">
           <div class="profile-section">
-            <img class="profile-image" src="me.png" alt="Parun Profile Picture" />
+            <img class="profile-image" src="img/me.png" alt="Parun Profile Picture" />
             <h2 class="name">Parun Chumnankul</h2>
             <p class="student-info">M.6/2 No.8</p>
             <p class="school">Suankularb Wittayalai Nonthaburi</p>
@@ -99,4 +99,5 @@
     </script>
   </body>
 </html>
+
 
